<resources>
    <string name="app_name">Map Attribute</string>
    <string name="NormalMode">NORMAL</string>
    <string name="HybridMode">HYBRID</string>
    <string name="TerrainMode">TERRAIN</string>
    <string name="Nothing">NOTHING</string>
    <string name="Stop">STOP_ACCESSES</string>
    <string name="Everything">EVERYTHING</string>
    <string name="Flow">FLOW</string>
    <string name="Incident">INCIDENT</string>
    <string name="Coverage">COVERAGE</string>
    <string name="engine_init_error">Map engine initialization</string>
</resources>
